# SPIS2900-Bachelor

./: README.md
app/: CMakeLists.txt
app/benchmarks/: benchmark.cpp
app/include/: Command.hpp  CommandLog.hpp  Database.hpp  IDatabaseInterface.hpp  Replay.hpp  SQLiteCommandLog.hpp  SQLiteDBI.hpp
app/src/: CommandLog.cpp  Database.cpp  Replay.cpp  SQLiteCommandLog.cpp  SQLiteDBI.cpp
app/tests/: test_sqlite.cpp  tests.cpp
report/: .gitignore  Makefile  glossary.tex  main.glg  main.glo  main.gls  main.lol  main.out  main.tex  references.bib
